<resources>
    <string name="app_name">Bangla Quran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bangla Qur\'an</string>
    <string name="nav_header_subtitle">marufhaq9@live.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="chapter">সুরা নংঃ</string>
    <string name="verses">আয়াত সংখ্যাঃ</string>
    <string name="aujubillajh">أعوذُ بِٱللَّهِ مِنَ ٱلشَّيۡطَٰنِ ٱلرَّجِيمِ</string>
    <string name="aujubilla_meaning">অর্থঃ আমি বিতাড়িত শয়তান থেকে আল্লাহর নিকট আশ্রয় প্রার্থনা করছি।</string>
    <string name="bismillah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="bismillah_meaning">অর্থঃ শুরু করছি আল্লাহর নামে যিনি পরম করুণাময়, অতি দয়ালু।</string>
    <string name="action_about">About</string>
    <string name="flower">flower</string>
    <string name="ok">OK</string>
    <string name="scientific_facts">Scientific Facts</string>
</resources>
