<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_flower"
            android:contentDescription="@string/flower" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aujubillajh"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="@font/fonts"
            android:textColor="@color/colorPrimaryDark"
            tools:targetApi="jelly_bean" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/aujubilla_meaning"
            android:textAlignment="center"
            android:fontFamily="@font/fonts"
            android:textColor="@color/colorPrimaryDark"
            tools:targetApi="jelly_bean" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#a40404" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="23sp"
            android:text="@string/bismillah"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/bismillah_meaning"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttonshape"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>